--- a/style.css
+++ b/style.css
@@ -25,3 +25,14 @@
   display: flex;
  
  }
+ #circle {
+  width: 300px;
+  height: 300px;
+ background-color:rgb(102,150,200);
+  border: 1px solid black;
+  border-radius: 100%;
+  margin-left: 40%;
+  
+ }
+  /* opacity */
+  /* word spacing, letter spacing  */
